# containerized

./: LICENSE  README.md  build.Containerfile  pyproject.toml
.github/workflows/: main.yml  tag.yml
buildcontainer_tool/: __main__.py
containerized/: __main__.py
