[tool.poetry]
name = "buildcontainer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "buildcontainer_tool"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
buildcontainer = "buildcontainer_tool.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
