[tool.poetry]
name = "containerized"
version = "0.2.0"
description = ""
authors = ["Max Beckmann"]
readme = "README.md"
packages = [{include = "containerized"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
containerized = "containerized.__main__:main"
crzd = "containerized.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
